--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Projects</a></li>
-						<li><a href="elements.html">CV</a></li>
+						<li><a href="images/CV_web.pdf">CV</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -35,19 +34,29 @@
 			<!-- One -->
 				<section id="one"class="wrapper style1">
 					<div class="container 75%">
-						<header class="major">
-							<h2>About me</h2>
-						</header>
-						<p><span class="image left"><img src="images/profile.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</p> 
-						<p>Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+						<div class="row 200%">
+							<div class="6u 12u$(medium)">
+								<header class="major">
+									<h2>About me</h2>
+									<div class="11u"><span class="image fit"><img src="images/profile.jpg" style="max-width: 400px" alt="" /></span></div>
+								</header>
+							</div>
+							<div class="6u$ 12u$(medium)">
+                                <br>
+                                <br>
+								<p>I am a research assistant at the chair for Public Economics at the University of Augsburg. My research currently focuses on approaches to explain human consumption decisions with adverse health effects and possible policy measures to counteract and avoid negative outcomes. </p> 
+								<p>I compleded my Masters degree in Economics and Public Policy in 2014 at the University of Augsburg. My focus lay in economic modeling, time series analysis and econometrics. In my thesis I analyzed education decisions and earning profiles in a model of overlapping generations.</p>
+								<p>My hobbies include photography, cooking, programming and model painting and building.</p>
+							</div>
+						</div>
 					</div>
 				</section>
 
 				<section id="four" class="wrapper style3 special">
 					<div class="container">
 						<header class="major">
-							<h2>Aenean elementum ligula</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
+							<h2>Projects</h2>
+							<p>Economic Research and Data Science overview</p>
 						</header>
 					</div>
 				</section>
@@ -56,70 +65,79 @@
 					<div class="container">
 						<header class="major special">
 							<h2>Research</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
+							<p>Current and past research topics</p>
 						</header>
 						<div class="feature-grid">
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Consumption decisions and health</h4>
+										<p>A behavioral approach</p>
+									</header>
+									<p>We present a framework to explain why people choose a consumption pattern that might be detrimental for their health. </p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic02.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Pension system reform</h4>
+										<p>Optimal tax base for pension contributions</p>
+									</header>
+									<p>We analyze if welfare can be increased by a variety of pension reforms regarding the tax base and redistribution parameters.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section id="three" class="wrapper style2">
+					<div class="container">
+						<header class="major special">
+							<h2>Projects</h2>
+							<p>Topics of interest</p>
+						</header>
+						<div class="feature-grid">
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic03.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Agent based modeling</h4>
+										<p>An alternative approach to economic modeling</p>
+									</header>
+									<p>Modeling the labor market in an urban region.</p>
+								</div>
+							</div>
 							<div class="feature">
 								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
+										<h4>Image classification</h4>
+										<p>MNIST Dataset for hand written digits</p>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
+									<p>Testing different models and approaches to improve performance.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/test.png" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
+										<h4>Procedural Generation</h4>
+										<p>Perlin noise</p>
 									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
-									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
-									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
-									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
-									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
+									<p>Approach to generate and save images of an archipelago by using procedural generation.</p>
 								</div>
 							</div>
 						</div>
+					</div>
+				</section>
+
+				<section id="four" class="wrapper style3 special">
+					<div class="container">
+						<header class="major">
+							<p>For more information check out the links below</p>
+						</header>
 					</div>
 				</section>
 
@@ -129,6 +147,7 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
+						<li><a href="mailto:alex.lerf@gmail.com" class="icon fa-mail-reply"></a></li>
 						<li><a href="https://www.instagram.com/masterkanbei/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/a-lerf" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/alexander-lerf-324b91200/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -136,7 +155,7 @@
 					<ul class="copyright">
 						<li>&copy; Alexander Lerf</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>Images: &copy; Alexander Lerf</li>
 					</ul>
 				</div>
 			</footer>
